--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   min-height: 100vh;
 
@@ -14,4 +15,40 @@ body {
     rgba(163, 208, 219, 1) 74%,
     rgba(163, 208, 219, 1) 100%
   );
+  nav {
+    height: 120px;
+    width: 100vw;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    .title {
+      font-family: 'Bungee', cursive;
+      margin-left: 1.5em;
+      font-size: 30px;
+    }
+    .right-side-items {
+      display: flex;
+      flex-direction: column;
+      margin-right: 1.5em;
+      font-size: 20px;
+    }
+    .right-side-text {
+      margin-bottom: 3px;
+    }
+    .double-down-arrow {
+      display: flex;
+      justify-content: center;
+      color: red;
+
+    }
+  }
+  main {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 }
