--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
@@ -15,10 +16,26 @@
 
 <body>
   <%- include('./partials/_nav'); %>
-
-  <h1>Rohit 🥔</h1>
-
-
+  <main class="container">
+    <h1>Our Menu:</h1>
+    <% for (let food_item of food_items) {%>
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-4">
+            <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" class="img-fluid">
+          </div>
+          <div class="col-8">
+            <div class="card-body">
+              <h4 class="card-title"><%= food_item.name %></h4>
+              <p class="card-text"><%= food_item.description %></p>
+              <h4 class="card-text text-end font-italic">$<%= food_item.price_in_cents_after_tax / 100 %></h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% } %>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
