--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
   <div class="title">
     <span>tweeter</span>
   </div>
@@ -8,6 +8,31 @@
     </div>
     <div class="double-down-arrow">
       <i class="fa-solid fa-angles-down" ></i>
+    </div>
+  </div>
+</nav> -->
+
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Restaurant</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled</a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
