--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,17 @@
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <!--myCart CSS-->
+  <link rel="stylesheet" href="/styles/mycart.css" type="text/css" />
+
+
+
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <!--JS-->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
-
 
 </head>
 
@@ -23,15 +28,15 @@
     <h1>Our Menu:</h1>
     <% for (let food_item of food_items) {%>
       <div class="card mb-3">
-        <div class="row">
+        <div class="row foodEntity">
           <div class="col-4">
-            <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" class="img-fluid">
+            <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" class="img-fluid foodImage">
           </div>
           <div class="col-8">
             <div class="card-body">
-              <h4 class="card-title"><%= food_item.name %></h4>
+              <h4 class="card-title foodName"><%= food_item.name %></h4>
               <p class="card-text"><%= food_item.description %></p>
-              <h4 class="card-text text-end font-italic">$<%= food_item.price_in_cents_after_tax / 100 %></h4>
+              <h4 class="card-text text-end font-italic price">$<%= food_item.price_in_cents_after_tax / 100 %></h4>
               <div>
                 <button class="add-btn">Add to Cart</button>
               </div>
@@ -43,7 +48,13 @@
   </main>
 
   <aside class="cart">
-    <h2>My Cart</h2>
+    <h3>My Cart</h3>
+
+    <div class="cart-title">
+      <h4>Item</h4>
+      <h4>Price Per Item</h4>
+      <h4>Quantity</h4>
+    </div>
 
     <!--CART LIST ROWS-->
     <div id="cartList">
