--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -1,8 +1,49 @@
-.top {
+
+.restaurant-container{
+  width: 90vw;
+  margin-left: 5vw;
+  margin-right: 5vw;
   display:flex;
+  flex-direction: column;
   justify-content: center;
+  border: dashed 3px green;
+  background-color: white;
   #banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: pink;
-    width: 90vw;
+    width: 100%;
+    h3 {
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+  #order-title {
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 1.25rem;
+    font-weight: bold;
+    border-bottom: darkblue 2px solid;
+    p {
+      text-align: center;
+      width: 33%;
+    }
+  }
+  .order-list {
+    display:flex;
+    flex-direction: column;
+
+    .one-order {
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
+      display:flex;
+      justify-content: space-around;
+    }
+
+    .time-container {
+      width: 20%;
+    }
   }
 }
