--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -70,6 +70,23 @@
       </div>
 
     </div>
+
+    <footer>
+      <div>
+        <h3>Previous Orders</h3>
+      </div>
+      <div>
+        <p>
+          <%- JSON.stringify(carts) %>
+        </p>
+      </div>
+    </footer>
+
+
+
+
   </main>
+
+
 </body>
 </html>
