--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -26,6 +26,7 @@
     font-size: 1.25rem;
     font-weight: bold;
     border-bottom: darkblue 2px solid;
+    background-color: peachpuff;
     #order-details-title {
       border: gold 3px solid;
       width: 90%;
