fixed POST route ACTION to /restaurant

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
     </div>
 
     <div>
-      <form method="POST" action="/resturant" class="checkout">
+      <form method="POST" action="/restaurant" class="checkout">
         <button id="checkout-btn">Checkout</button>
       </form>
     </div>
