added input text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,6 +75,13 @@
         <span id="total">$0</span>
       </div>
     </div>
+    <div>
+      <div><h5>Add Note:</h5></div>
+      <form>
+        <input type="text" />
+
+      </form>
+    </div>
 
     <div>
       <form method="POST" action="/restaurant" class="checkout">
