removed testJS import

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,8 @@
   <!--JS-->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
+  <!-- TEST JS
+  <script type="text/javascript" src="/scripts/app.js"></script> -->
 
 </head>
 
@@ -78,17 +80,14 @@
     <div>
       <div><h5>Add Note:</h5></div>
       <form>
-        <input type="text" />
-
+        <input id="note" type="text" />
       </form>
     </div>
 
     <div>
-      <form method="POST" action="/restaurant" class="checkout">
         <button id="checkout-btn">Checkout</button>
-      </form>
     </div>
-
+<!--method="POST" action="/restaurant" class="checkout"-->
   </aside>
 
 
