added input for test.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,9 +18,10 @@
 
   <!--JS-->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <!-- APP.JS -->
   <script type="text/javascript" src="/scripts/app.js"></script>
-  <!-- TEST JS
-  <script type="text/javascript" src="/scripts/app.js"></script> -->
+  <!-- TEST JS -->
+  <script type="text/javascript" src="/scripts/test.js"></script>
 
 </head>
 
@@ -80,7 +81,7 @@
     <div>
       <div><h5>Add Note:</h5></div>
       <form>
-        <input id="note" type="text" />
+        <textarea id="note" name="note"></textarea>
       </form>
     </div>
 
