--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -54,6 +54,7 @@
             </form>
           </div>
         <%} else if(user.id === 1) { %>
+          <label style="margin-right: 10px" for="logout">Logged in as <%= user.name %>  </label>
           <form action='/'  method='GET' >
             <button class="me-2">Logout</button>
           </form>
@@ -61,6 +62,7 @@
             <button>Orders</button>
           </form>
         <% } else { %>
+          <label style="margin-right: 10px" for="logout">Logged in as <%= user.name %>  </label>
           <form action='/' method='GET'>
             <button class="me-2">Logout</button>
           </form>
