attempted to add linking route to newcart

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,8 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
   <!-- TEST JS -->
   <script type="text/javascript" src="/scripts/test.js"></script>
+  <!--New Cart ROUTE JS-->
+  <!-- <script type="text/javascript" src="../routes/newCart.js"></script> -->
 
 </head>
 
@@ -84,11 +86,12 @@
         <textarea id="note" name="note"></textarea>
       </form>
     </div>
-
-    <div>
+    <form>
+      <div>
         <button id="checkout-btn">Checkout</button>
-    </div>
-<!--method="POST" action="/restaurant" class="checkout"-->
+      </div>
+    </form>
+
   </aside>
 
 
