commented out form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,8 +22,8 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
   <!-- TEST JS -->
   <script type="text/javascript" src="/scripts/test.js"></script>
-  <!--New Cart ROUTE JS-->
-  <!-- <script type="text/javascript" src="../routes/newCart.js"></script> -->
+  <!-- New Cart ROUTE JS
+  <script type="text/javascript" src="../routes/newCart.js"></script> -->
 
 </head>
 
@@ -86,15 +86,13 @@
         <textarea id="note" name="note"></textarea>
       </form>
     </div>
-    <form>
+    <!-- <form method="POST" action="/newcart"> -->
       <div>
         <button id="checkout-btn">Checkout</button>
       </div>
-    </form>
+    <!-- </form> -->
 
   </aside>
-
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
