incorporated twilio in newCart.js and added the messages strings that will be sent through twilio

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,7 +87,7 @@
         <textarea id="note" name="note"></textarea>
       </form>
     </div>
-    <!-- <form method="POST" action="/newcart"> -->
+    <!-- <form method="GET" action="/message"> -->
       <div>
         <button id="checkout-btn">Checkout</button>
       </div>
