--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -1,9 +1,8 @@
-
-.restaurant-container{
+.restaurant-container {
   width: 90vw;
   margin-left: 5vw;
   margin-right: 5vw;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   border: dashed 3px green;
@@ -20,7 +19,7 @@
     }
   }
   #order-title {
-    display:flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 1.25rem;
@@ -33,36 +32,36 @@
       text-align: center;
     }
     #est-time-title {
-      border:springgreen 3px solid;
+      border: springgreen 3px solid;
       text-align: center;
     }
   }
   .order-list {
-    display:flex;
+    display: flex;
     flex-direction: column;
 
     .one-order {
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
-      display:flex;
+      display: flex;
       justify-content: space-between;
       border: rgb(216, 126, 156) dashed 3px;
 
       .order-details {
-        display:flex;
+        display: flex;
         flex-direction: column;
         width: 90%;
         border: steelblue 3px solid;
         .user-details {
-          border:tomato 3px solid;
-          display:flex;
+          border: tomato 3px solid;
+          display: flex;
           flex-direction: row;
           justify-content: space-between;
           align-items: center;
           padding-right: 1.5rem;
-          padding-left:1.5rem;
+          padding-left: 1.5rem;
           div {
-            display:flex;
+            display: flex;
           }
           span {
             font-weight: bold;
@@ -71,14 +70,14 @@
         }
 
         .food-details {
-          border:springgreen 3px solid;
+          border: springgreen 3px solid;
           span {
             font-weight: bold;
           }
         }
 
         .note-details {
-          border:orange 3px solid;
+          border: orange 3px solid;
           span {
             font-weight: bold;
           }
@@ -90,7 +89,7 @@
 
       .time-container {
         border: red solid 3px;
-        display:flex;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -101,10 +100,9 @@
           margin-bottom: 1rem;
         }
         button {
-          background-color:lightgreen
+          background-color: lightgreen;
         }
       }
     }
-
   }
 }
