--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,6 @@
   <link rel="stylesheet" href="/styles/mycart.css" type="text/css" />
 
 
-
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <!--JS-->
@@ -22,15 +20,42 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
   <!-- TEST JS -->
   <script type="text/javascript" src="/scripts/test.js"></script>
-  <!-- New Cart ROUTE JS
-  <script type="text/javascript" src="../routes/newCart.js"></script> -->
+  <!--SOCKET.IO-->
+  <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
+
+
 
 </head>
 
 <body>
+
+
   <%- include('./partials/_nav'); %>
   <main class="container">
     <h1>Our Menu:</h1>
+<!--*************************-->
+    <input type="text" class="hi">
+    <button onclick="sendMessage()">Send Message</button>
+
+    <h2 id="yes"></h2>
+    <script>
+
+      const socket = io("http://localhost:8080");
+      socket.on('connection')
+
+      socket.on("message", (data) => {
+        document.querySelector('h2').innerHTML = data;
+      })
+      const sendMessage = () => {
+        const messageInput = document.querySelector('.hi')
+        const message = messageInput.value
+        socket.emit('message', message)
+      }
+    </script>
+
+
+
+
     <% for (let food_item of food_items) {%>
       <div class="card mb-3">
         <div class="row foodEntity">
