--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -19,11 +19,26 @@
 
   <!--JS-->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <!--SOCKET.IO-->
+  <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
 
 </head>
 <body>
   <%- include('./partials/_nav') %>
   <h1>Restaurant's Main Page</h1>
+
+  <h2 id="bye"></h2>
+  <script>
+
+    const socket = io("http://localhost:8080");
+    socket.on('connection')
+    socket.on("message", (data) => {
+      document.querySelector('h2').innerHTML = data;
+    })
+  </script>
+
+
+
 
   <main class="restaurant-container">
 
