base code for socket.io

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,11 +34,11 @@
   <main class="container">
     <h1>Our Menu:</h1>
 <!--*************************-->
-    <input type="text" class="hi">
-    <button onclick="sendMessage()">Send Message</button>
+    <textarea type="text" class="hi"></textarea>
+    <button id="send">Send Message</button>
 
     <h2 id="yes"></h2>
-    <script>
+    <!-- <script>
 
       const socket = io("http://localhost:8080");
       socket.on('connection')
@@ -51,7 +51,7 @@
         const message = messageInput.value
         socket.emit('message', message)
       }
-    </script>
+    </script> -->
 
 
 
