--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -20,7 +20,6 @@
   <!--JS-->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <!--SOCKET.IO-->
-  <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
 
 </head>
 <body>
@@ -28,11 +27,16 @@
   <h1>Restaurant's Main Page</h1>
 
   <h2 id="bye"></h2>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.js" integrity="sha512-nYuHvSAhY5lFZ4ixSViOwsEKFvlxHMU2NHts1ILuJgOS6ptUmAGt/0i5czIgMOahKZ6JN84YFDA+mCdky7dD8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <script>
 
-    const socket = io("http://localhost:8080");
-    socket.on('connection')
-    socket.on("message", (data) => {
+    const socket = io("ws://localhost:3000");
+    socket.on('connect', ()=> {
+      console.log("restaurant.ejs is connected")
+    })
+    socket.on("inputValue", (data) => {
+      console.log("DATTTA", data)
       document.querySelector('h2').innerHTML = data;
     })
   </script>
