--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -34,7 +34,7 @@
 
     <div id="order-title">
       <div id="order-details-title">ORDER DETAILS</div>
-      <div id="est-time-title">ESTIMATED TIME TO <br> COMPLETE</div>
+      <div id="est-time-title">ESTIMATED <br> TIME TO COMPLETE</div>
       <div id="completed">COMPLETED</div>
     </div>
 
