--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -101,11 +101,15 @@
         justify-content: center;
         align-items: center;
         width: 20%;
-        // padding: 0.5rem;
-        #estimated-time {
-          width: 6rem;
-          height: 3rem;
-          margin-bottom: 1rem;
+        form {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          // padding: 0.5rem;
+          .estimated-time {
+            width: 80%;
+            height: 70%;
+          }
         }
         button {
           background-color: lightgreen;
