adjusted text alignment of textarea box

--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -109,6 +109,7 @@
           .estimated-time {
             width: 80%;
             height: 70%;
+            text-align: center;
           }
         }
         button {
