adjusting submit button css

--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -112,7 +112,7 @@
             text-align: center;
           }
         }
-        button {
+        .submit-btn {
           background-color: lightgreen;
         }
       }
