--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,20 +20,21 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
   <!-- TEST JS -->
   <script type="text/javascript" src="/scripts/test.js"></script>
-  <!--SOCKET.IO-->
-  <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
-
-
+  <!-- SOCKET.IO
+  <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script> -->
 
 </head>
 
 <body>
 
   <%- include('./partials/_nav'); %>
+
+  <div class="notification">
+  </div>
+
+
   <main class="container">
     <h1>Our Menu:</h1>
-
-    <h2 id="yes"></h2>
 
     <% for (let food_item of food_items) {%>
       <div class="card mb-3">
@@ -97,8 +98,42 @@
 
   </aside>
 
-
+  <!--BOOTSTRAP-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  <!--SOCKET IO-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.js" integrity="sha512-nYuHvSAhY5lFZ4ixSViOwsEKFvlxHMU2NHts1ILuJgOS6ptUmAGt/0i5czIgMOahKZ6JN84YFDA+mCdky7dD8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script>
+    const socket = io("ws://localhost:3000");
+    socket.on('connect', () => {
+      //below is displayed on browser console
+      console.log("index.ejs is connected ->")
+    })
+    socket.on("time-message", (data) => {
+      // console.log("time-message data--")
+      // console.log(data);
+      //incoming data is an object where the message is the key
+      // get key and place into an array
+      let arrKey = Object.keys(data);
+      // grab the message
+      let message = arrKey[0];
+      // console.log("MESSAGE:", message);
+      // console.log("-------------")
+
+      const $h2 = $("<h2>").text(message)
+
+      $(".notification").append(message);
+
+    })
+
+  </script>
+
+
+
+
+
+
 </body>
 
 </html>
